[tool.poetry]
name = "chatbot"
version = "1.0.2"
description = "LLM-based Chatbot"
authors = ["Joseph Wang <egpivo@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/egpivo/chatbot"
repository = "https://github.com/egpivo/chatbot"

include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.10.12"
bentoml = "1.0.18"
openai = "^0.27.4"
gradio = "3.27.0"
langchain = "^0.0.136"
transformers = "^4.27.4"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
sentencepiece = "^0.1.97"
datasets = "^2.11.0"
wikipedia = "^1.4.0"
ffmpeg = "^1.4"
soundfile = "^0.12.1"
llvmlite = "^0.39.1"
librosa = "^0.10.0.post2"
orjson = "3.8.10"
fsspec= "^2023.9.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.971"
pydocstyle = { extras = ["toml"], version = "^6.1.1" }
pytest = "^7.1.3"
pytest-cov = "^4.1.0"
poethepoet = "^0.15.0"
coverage = { extras = ["toml"], version = "^6.4.4" }
pre-commit = "^2.20.0"
python-dotenv = "^1.0.0"
poetry-bumpversion = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
